# pocket-ml-lab

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md
examples/: house_prices_small.csv
pocket_ml_lab/: __init__.py  cli.py  experiment.py  loader.py  profiler.py  splitter.py
pocket_ml_lab/baselines/: __init__.py  majority_classifier.py  mean_regressor.py  median_regressor.py  nearest_centroid.py
pocket_ml_lab/metrics/: __init__.py  classification.py  regression.py
pocket_ml_lab/reporters/: __init__.py  json_reporter.py  markdown_reporter.py
tests/: test_baselines.py  test_cli.py  test_loader_profiler.py  test_metrics.py  test_reporters.py
