[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "pocket-ml-lab"
version = "0.1.0"
description = "Lightweight toolkit for explainable baseline ML experiments on small CSV datasets"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [{ name = "Abdul Salam", email = "get2salam@gmail.com" }]
keywords = ["machine-learning", "baseline", "csv", "explainable-ai", "experiment"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[project.scripts]
pocket-ml = "pocket_ml_lab.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pocket_ml_lab*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
